--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,52 @@
+@font-face {
+  font-family: 'RecoletaDemo';
+  src: url('/fonts/recoleta-demo.woff2');
+  font-style: normal;
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: 'metropolis';
+  src: url('/fonts/metropolis.regular.otf');
+  font-style: normal;
+  font-weight: 400;
+}
+
+@font-face {
+  font-family: 'metropolis';
+  src: url('/fonts/metropolis.semi-bold.otf');
+  font-style: normal;
+  font-weight: 500;
+}
+
+@font-face {
+  font-family: 'metropolis';
+  src: url('/fonts/metropolis.bold.otf');
+  font-style: normal;
+  font-weight: 700;
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: metropolis, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+  font-family: RecoletaDemo;
+  font-weight: 400;
+}
+
+p {
+  line-height: 175%;
 }
 
 a {
