Added in project thumbnails and filters

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -41,8 +41,19 @@ h4,
 h5,
 h6 {
   margin: 0;
-  font-family: RecoletaDemo;
   font-weight: 400;
+}
+
+h1,
+h2,
+h3 {
+  font-family: RecoletaDemo;
+}
+
+h4,
+h5,
+h6 {
+  font-family: metropolis;
 }
 
 p {
