--- a/styles/globals.css
+++ b/styles/globals.css
@@ -57,7 +57,8 @@ h6 {
 }
 
 p {
-  line-height: 175%;
+  line-height: 160%;
+  font-size: 18px;
 }
 
 a {
@@ -67,4 +68,8 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+input:focus {
+  outline-width: 0;
 }
